--- a/about.html
+++ b/about.html
@@ -141,10 +141,10 @@
 
 
             <ul>
-                <li><a href="https://www.manageengine.com/products/self-service-password/help/admin-guide/index.html" target="_blank">ManageEngine ADSelfService Plus Admin Manual (Zoho Product)</a></li>
-                <li><a href="https://selfserve.hds.com/help/user-guide/index.html" target="_blank">ManageEngine ADSelfService Plus User Manual (Zoho Product)</a></li>
-                <li><a href="https://help.servicedeskplus.com/index.html" target="_blank">ManageEngine ServiceDesk Plus Admin Manual (Zoho Product)</a></li>
-                <li><a href="https://userguide.servicedeskplus.com/home" target="_blank">ManageEngine ServiceDesk API Manual (Zoho Product)</a></li>
+                <li><a href="https://www.manageengine.com/products/self-service-password/help/admin-guide/index.html" target="_blank">ADSelfService Plus Admin Manual (Zoho Product)</a></li>
+                <li><a href="https://selfserve.hds.com/help/user-guide/index.html" target="_blank">ADSelfService Plus User Manual (Zoho Product)</a></li>
+                <li><a href="https://help.servicedeskplus.com/index.html" target="_blank">ServiceDesk Plus Admin Manual (Zoho Product)</a></li>
+                <li><a href="https://userguide.servicedeskplus.com/home" target="_blank">ServiceDesk Plus User Manual (Zoho Product)</a></li>
 
 
             </ul><br />
@@ -153,7 +153,7 @@
 
 
             <ul>
-                <li><a href="https://help.servicedeskplus.com/api#" target="_blank">ManageEngine ADSelfService Plus Admin Manual (Zoho Product)</a></li>
+                <li><a href="https://help.servicedeskplus.com/api#" target="_blank">ServiceDesk Plus API Manual (Zoho Product)</a></li>
        
 
             </ul><br />
