--- a/about.html
+++ b/about.html
@@ -187,9 +187,9 @@
 
         <div id="overview">
             <h2>During the Pandemic</h2>
-            <p>Like many others, I decided to upskill and taught myself the basics of creating a web application. And now I can proudly say that this site (plus the DesignNDeliver website and all the other websites listed in its portfolio page) is testament to all that I have learned during the past few months. </p>
+            <p>Like many others, I decided to upskill and taught myself the basics of creating a web application. This site is testament to all that I have learned in the past few months. </p>
 
-            <p>It is my little attempt at dispensing knowledge that I gained to those who are in need  of it. Now before you ask me why this site appears so outdated (which is in stark contrast to what you see at DesignNDeliver) let me tell you that I wanted it to appear 'retro'.</p>
+            <p>It is my little attempt at dispensing knowledge that I gained to those who need it. Now before you ask me why this site appears so outdated (which is in stark contrast to those websites which appear in the DesignNDeliver portfolio page) let me tell you that I wanted it to appear 'retro'.</p>
         </div>
 
     </div>
